fix active and hover color

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 			view_mode: 'Day',
 			language: 'en',
 			sortable: true,
-			readonly: true,
+			readonly: false,
 			show_progress: false,
 		});
 	</script>
