show year with month

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			on_bar_sort: function(task_being_dragged_id, task_being_replaced_id) {
 				console.log("### on_bar_sort: (dragged/replaced) ", task_being_dragged_id, "/", task_being_replaced_id);
 			},
-			view_mode: 'Day',
+			view_mode: 'Day', // Quarter Day, Half Day, Day, Week, Month, Year
 			language: 'en',
 			sortable: true,
 			readonly: false,
