Make grid background for weekends

--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 	<script>
 		var tasks = [
 			{
-				start: '2022-10-01',
-				end: '2022-10-08',
+				start: '2023-01-01',
+				end: '2023-01-08',
 				name: 'Redesign website 0',
 				id: "Task 0",
 				progress: 20,
 				custom_class: 'bar-blue'
 			},
 			{
-				start: '2022-10-03',
-				end: '2022-10-06',
+				start: '2023-01-03',
+				end: '2023-01-06',
 				name: 'Write new content 1',
 				id: "Task 1",
 				progress: 5,
@@ -53,8 +53,8 @@
 				custom_class: 'bar-blue'
 			},
 			{
-				start: '2022-10-04',
-				end: '2022-10-08',
+				start: '2023-01-04',
+				end: '2023-01-08',
 				name: 'Apply new styles 2',
 				id: "Task 2",
 				progress: 10,
@@ -62,8 +62,8 @@
 				custom_class: 'bar-blue'
 			},
 			{
-				start: '2022-10-08',
-				end: '2022-10-09',
+				start: '2023-01-08',
+				end: '2023-01-09',
 				name: 'Review 3',
 				id: "Task 3",
 				progress: 5,
@@ -71,8 +71,8 @@
 				custom_class: 'bar-green'
 			},
 			{
-				start: '2022-10-08',
-				end: '2022-10-10',
+				start: '2023-01-08',
+				end: '2023-01-10',
 				name: 'Deploy 4',
 				id: "Task 4",
 				progress: 0,
@@ -80,8 +80,8 @@
 				custom_class: 'bar-green'
 			},
 			{
-				start: '2022-10-11',
-				end: '2022-10-11',
+				start: '2023-01-11',
+				end: '2023-01-11',
 				name: 'Go Live! 5',
 				id: "Task 5",
 				progress: 0,
@@ -110,6 +110,7 @@
 			sortable: true,
 			readonly: false,
 			show_progress: false,
+			show_weekends: true,
 		});
 	</script>
 </body>
